; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dvd.c_DVD_LowAudioStream.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dvd.c_DVD_LowAudioStream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32, i64 }

@__dvd_callback = common dso_local global i32 0, align 4
@__dvd_stopnextint = common dso_local global i64 0, align 8
@DVD_AUDIOSTREAM = common dso_local global i32 0, align 4
@_diReg = common dso_local global i32* null, align 8
@DVD_DI_START = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DVD_LowAudioStream(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.timespec, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  store i32 %10, i32* @__dvd_callback, align 4
  store i64 0, i64* @__dvd_stopnextint, align 8
  %11 = load i32, i32* @DVD_AUDIOSTREAM, align 4
  %12 = load i32, i32* %5, align 4
  %13 = or i32 %11, %12
  %14 = load i32*, i32** @_diReg, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 2
  store i32 %13, i32* %15, align 4
  %16 = load i32, i32* %7, align 4
  %17 = ashr i32 %16, 2
  %18 = load i32*, i32** @_diReg, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 3
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load i32*, i32** @_diReg, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 4
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* @DVD_DI_START, align 4
  %24 = load i32*, i32** @_diReg, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 7
  store i32 %23, i32* %25, align 4
  %26 = getelementptr inbounds %struct.timespec, %struct.timespec* %9, i32 0, i32 0
  store i32 10, i32* %26, align 8
  %27 = getelementptr inbounds %struct.timespec, %struct.timespec* %9, i32 0, i32 1
  store i64 0, i64* %27, align 8
  %28 = call i32 @__SetupTimeoutAlarm(%struct.timespec* %9)
  ret i32 1
}

declare dso_local i32 @__SetupTimeoutAlarm(%struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
